--- a/08-HTML/homework/homework.html
+++ b/08-HTML/homework/homework.html
@@ -1,40 +1,48 @@
-<html>
-    <head>
-        <title> Tarea HTML de Aldo Dominguez </title>
-       <link rel="stylesheet" href="style.css">
-    </head>
-    
-    <body>
-        <Div Class = divClass>
-            <h1>
-                ALDO DOMINGUEZ
-            </h1>
-            <h3>
-                Henry
-            </h3>
-            <h4>
-                Tarea de HTML / CSS
-            </h4>
-        </Div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <Div Class = divClass>
-            <span id = spanId>
-                Mi comida favorita es asado con ensalada, y milanesa con papas fritas
-            </span>
-            <a href = https://rinconcito.negocio.site/> Link al resto favorito</a>
-        </Div>
+    <title> Tarea HTML de Aldo Dominguez </title>
+    <link rel="stylesheet" href="style.css">
+</head>
 
-        <Div id = thirdDiv>
-            <ul>
-                <li>
-                    <img src = mila-c-frita.bmp />
-                </li>
-                <li>
-                    <img src = https://th.bing.com/th/id/R.b18cdbea8c2be36cfc147eb1a6ddeae6?rik=XwqHFg8%2fTvFy7Q&pid=ImgRaw&r=0 />
-                </li>
-            </ul>
-        </Div>
+<body>
+   
+    <Div Class = divClass>
+        <h1>
+            ALDO DOMINGUEZ
+        </h1>
+        <h3>
+            Henry
+        </h3>
+        <h4>
+            Tarea de HTML / CSS
+        </h4>
+    </Div>
 
-    </body>
+    <Div Class = divClass>
+        <span id = spanId>
+            Mi comida favorita es asado con ensalada, y milanesa con papas fritas
+        </span>
+        <a href = https://rinconcito.negocio.site/1| > Link al resto favorito </a>
+
+    </Div>
+
+    <Div id = thirdDiv>
+        <ul>
+           
+            <li>
+                <img src = mila-c-frita.bmp />
+            </li>
+            <li>
+                <img src = https://th.bing.com/th/id/R.b18cdbea8c2be36cfc147eb1a6ddeae6?rik=XwqHFg8%2fTvFy7Q&pid=ImgRaw&r=0 />
+            </li>
+        </ul>
+    </Div>
+
+</body>
 
 </html>
